# vibe-types

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  generate-rules.sh  requirements-review.txt  validate-python.py  validate-typescript.py  vibe-clean.sh  vibe-review.py  vibe-tdd.py
.claude-plugin/: marketplace.json  plugin.json
appendix/: feature-matrix.md  further-reading.md  glossary.md
catalog/: 00-overview.md  01-union-intersection.md  02-type-lambdas.md  03-match-types.md  04-dependent-polymorphic.md  05-givens-using.md  06-context-functions.md  07-extension-methods.md  08-type-class-derivation.md  09-multiversal-equality.md  10-conversions-by-name.md  11-enums-adts-gadts.md  12-opaque-types.md  13-open-export-transparent.md  14-matchable-typetest.md  15-structural-refined.md  16-kind-polymorphism.md  17-inline-compiletime.md  18-macros-quotes.md  19-explicit-nulls.md  20-erased-definitions.md  21-capture-checking.md  22-experimental-preview.md  23-changed-dropped.md
docs/: core-tenets.md
docs/best-practices/: draft.md  juan-pablo.md  resources.md
docs/skill-planning/: bringing-vibe-types-into-context.md  language-context-strategy.md  pi-integration.md
eslint-plugin/: package-lock.json  package.json  tsconfig.build.json  tsconfig.json
eslint-plugin/prompts/: analyze-knowledge-file.md  generate-rule.md
eslint-plugin/src/: index.ts
evals/: README.md
evals/behavioral/: README.md  run_behavioral.py  score.py
evals/triggering/: .env.example  README.md  optimize.py  queries.json  run_triggering.py
haskell/: README.md
java/: README.md
lean/: README.md  inputs.md
lean/catalog/: 00-overview.md  02-dependent-types.md  06-propositions-as-types.md  08-totality-partial.md  14-subtypes-refinements.md  15-opaque-definitions.md  16-notation-attributes.md
lean/usecases/: 01-preventing-invalid-states.md  03-totality-exhaustiveness.md  06-generic-programming-type-classes.md  07-safe-recursion-termination.md  08-encapsulation-module-boundaries.md  10-interop-escape-hatches.md
plugin/.claude-plugin/: plugin.json
plugin/commands/: install-context.md
plugin/hooks/: hooks.json
projects/lean-project/: .gitignore  LeanProject.lean  lake-manifest.json  lakefile.toml
projects/python-project/: .gitignore  pyproject.toml
projects/rust-project/: .gitignore  Cargo.toml  rust-toolchain.toml
projects/rust-project/src/: lib.rs
projects/scala-project/: .gitignore  .scalafmt.conf  README.md  build.sbt
projects/typescript-project/: .gitignore  globals.d.ts  package-lock.json  package.json  tsconfig.json
python/: README.md
python/catalog/: 03-typeddict.md  05-enums-typing.md  11-callable-types-overload.md  14-never-noreturn.md  15-annotated-metadata.md  18-generic-classes-variance.md
python/usecases/: 01-preventing-invalid-states.md  03-type-narrowing-exhaustiveness.md  04-generic-constraints.md  07-api-contracts-callable.md  08-error-handling-types.md  11-decorator-typing.md  12-gradual-adoption.md
rust/: README.md  inputs.md
rust/analysis/: 11-book-findings.md  12-rustcore-findings.md  20-merged-map.md  30-crossref-plan.md  40-readiness-report.md
rust/catalog/: 00-overview.md  01-ownership-moves.md  02-borrowing-mutability.md  03-lifetimes.md  04-structs-enums-newtypes.md  05-generics-where-clauses.md  06-traits-impls.md  07-associated-types-advanced-traits.md  08-trait-objects-dyn.md  09-inference-aliases-conversions.md  10-smart-pointers-interior-mutability.md  11-send-sync.md  12-const-generics.md  13-coherence-orphan-rules.md  14-trait-solver-param-env.md
rust/usecases/: 00-overview.md  01-preventing-invalid-states.md  02-ownership-safe-apis.md  03-generic-capability-constraints.md  04-extensible-polymorphic-interfaces.md  05-compile-time-concurrency-constraints.md  06-conversion-boundaries.md  07-trait-impl-failure-diagnostics.md  08-value-level-invariants-with-types.md
scala3/: inputs.md
scala3/catalog/: 01-union-intersection.md  03-match-types.md  09-multiversal-equality.md  12-opaque-types.md  14-matchable-typetest.md  16-kind-polymorphism.md
scala3/usecases/: 00-overview.md
skills/: lean.md  python.md  rust.md  scala3.md
skills/agda/: README.md
skills/lean/: SKILL.md
taxonomy/: sources.md  techniques.md  usecases.md
tlaplus/: README.md
usecases/: 00-overview.md  01-preventing-invalid-states.md  02-domain-modeling.md  03-access-encapsulation.md  04-effect-tracking.md  05-compile-time-programming.md  06-protocol-state-machines.md  07-extensibility.md  08-equality-comparison.md  09-nullability-optionality.md  10-variance-subtyping.md  11-type-level-arithmetic.md  12-serialization-codecs.md  13-dsl-builder-patterns.md  14-error-handling.md  15-migration-scala2.md
(+467 files in other folders)
