[project]
name = "python-project"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=8.0",
]

[tool.pyright]
typeCheckingMode = "strict"
reportUnnecessaryComparison = "error"
reportUnnecessaryContains = "error"
reportUnnecessaryCast = "error"
reportUnnecessaryTypeIgnoreComment = "error"
reportUnreachable = "error"
reportImplicitOverride = "error"
reportMissingTypeStubs = "error"
reportUninitializedInstanceVariable = "error"
deprecateTypingAliases = true
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
strictParameterNoneValue = true
