[package]
name = "rust-project"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
publish = false

[dependencies]

[dev-dependencies]

[lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
missing_docs = "warn"
unreachable_pub = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
let_underscore_drop = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
rust_2024_compatibility = { level = "warn", priority = -1 }

[lints.clippy]
# Enable broad lint groups, then override individual lints as needed.
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Stylistic preferences — keep on by default but allow if too noisy.
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

# Correctness and safety — promote to deny.
unwrap_used = "deny"
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
dbg_macro = "deny"
print_stdout = "warn"
print_stderr = "warn"
mem_forget = "deny"
indexing_slicing = "warn"
integer_division = "warn"
float_cmp = "deny"
lossy_float_literal = "deny"
as_conversions = "warn"
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
cast_precision_loss = "warn"
cast_sign_loss = "warn"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
