[package]
name = "rust-project"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
publish = false

[dependencies]
# Snippet-verification helpers from the rust-skill catalog. Kept as runtime
# dependencies (not dev-dependencies) so they are visible to bin targets
# under src/bin/ — `cargo rustc --bin` does not pull in [dev-dependencies].
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
derive_builder = "0.20"
# Catalog entries that center on a specific ecosystem crate — verifying these
# snippets against the real crate is the whole point of those catalog pages.
either = "1"
nutype = { version = "0.6", features = ["regex"] }
regex = "1"  # nutype's regex validators expand to regex::Regex calls.
typenum = "1"
tower = { version = "0.5", features = ["full"] }
reqwest = "0.12"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]

[lints.rust]
# `deny` rather than `forbid` so the snippet verifier can override with
# `-A unsafe_code` for catalog entries that legitimately demonstrate unsafe.
unsafe_code = "deny"
missing_debug_implementations = "warn"
missing_docs = "warn"
unreachable_pub = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
let_underscore_drop = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
rust_2024_compatibility = { level = "warn", priority = -1 }

[lints.clippy]
# Enable broad lint groups, then override individual lints as needed.
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Stylistic preferences — keep on by default but allow if too noisy.
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

# Correctness and safety — promote to deny.
unwrap_used = "deny"
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
dbg_macro = "deny"
print_stdout = "warn"
print_stderr = "warn"
mem_forget = "deny"
indexing_slicing = "warn"
integer_division = "warn"
float_cmp = "deny"
lossy_float_literal = "deny"
as_conversions = "warn"
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
cast_precision_loss = "warn"
cast_sign_loss = "warn"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
